--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "private": true,
     "dependencies": {
         "express": "3.x",
-        "mongodb": "1.1.8"
+        "mongodb": "1.1.8",
+	"mongoose" : "*"
+ ,
+        "iz": "*",
+        "path": "*"
     },
     "engines": {
         "node": "0.10.21"
