--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "express": "3.x",
-        "mongodb": "1.1.8"
+    "express": "3.x",
+    "mongodb": "1.1.8",
+    "passport": "~0.1.17",
+
+    "passport-local": "~0.1.6",
+    "mongoose": "~3.8.0",
+
+    "passport-local-mongoose": "~0.2.5"
     },
     "engines": {
         "node": "0.10.21"
