--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dependencies": {
     "express": "4.9.7",
     "express-session": "1.8.2",
+    "cookie-parser": "1.3.3",
+    "body-parser": "1.9.0",
     "mongodb": "1.4.19",
     "passport": "0.2.1",
     "passport-local": "1.0.0",
